# Roland_Greffe-Master_Thesis

./: .gitignore  Erreur parRapport au Smooth SN.txt  HowTo.txt  ReadMe.MD  ReadMe.txt
Development/Tools/: CMakeLists.txt
Development/Tools/GigaVoxelsDicomVoxelizer/: CMakeLists.txt
Development/Tools/GigaVoxelsDicomVoxelizer/Src/: main.cu
Development/Tools/GigaVoxelsDicomVoxelizer/doc/: tool.dox
Development/Tools/GigaVoxelsViewer/: CMakeLists.txt
Development/Tools/GigaVoxelsViewer/GvViewer/: CMakeLists.txt
Development/Tools/GigaVoxelsViewer/GvViewer/Src/: main.cpp
Development/Tools/GigaVoxelsViewer/GvViewerCore/: CMakeLists.txt
Development/Tools/GigaVoxelsViewer/GvViewerCore/Inc/: GvvBrowsable.h  GvvCoreConfig.h  GvvDataType.h  GvvDeviceInterface.h  GvvEnvironment.h  GvvGLSceneInterface.h  GvvGLSceneManager.h  GvvGLSceneManagerListener.h  GvvLightInterface.h  GvvMeshInterface.h  GvvPipelineInterface.h  GvvPipelineManager.h  GvvPipelineManagerListener.h  GvvPluginInterface.h  GvvPluginManager.h  GvvProgrammableShaderInterface.h  GvvResourceManager.h  GvvTransferFunctionInterface.h  GvvVersion.h
Development/Tools/GigaVoxelsViewer/GvViewerCore/Src/: GvvBrowsable.cpp  GvvDataType.cpp  GvvDeviceInterface.cpp  GvvEnvironment.cpp  GvvGLSceneInterface.cpp  GvvGLSceneManager.cpp  GvvGLSceneManagerListener.cpp  GvvLightInterface.cpp  GvvMeshInterface.cpp  GvvPipelineInterface.cpp  GvvPipelineManager.cpp  GvvPipelineManagerListener.cpp  GvvPluginInterface.cpp  GvvPluginManager.cpp  GvvProgrammableShaderInterface.cpp  GvvResourceManager.cpp  GvvTransferFunctionInterface.cpp
Development/Tools/GigaVoxelsViewer/GvViewerGui/: CMakeLists.txt
Development/Tools/GigaVoxelsViewer/GvViewerScene/: CMakeLists.txt
Development/Tools/GigaVoxelsViewer/doc/: tool.dox
Development/Tools/GigaVoxelsVoxelizer/: CMakeLists.txt
Development/Tools/GigaVoxelsVoxelizer/Inc/: GvxAssimpSceneVoxelizer.h  GvxDataStructureIOHandler.h  GvxDataTypeHandler.h  GvxIWriter.h  GvxRAWReader.h  GvxSceneVoxelizer.h  GvxSceneVoxelizer.inl  GvxVersion.h  GvxVoxelizerDialog.h  GvxVoxelizerEngine.h  GvxWriter.h
Development/Tools/GigaVoxelsVoxelizer/Src/: GvxAssimpSceneVoxelizer.cpp  GvxDataStructureIOHandler.cpp  GvxDataTypeHandler.cpp  GvxIWriter.cpp  GvxRAWReader.cpp  GvxSceneVoxelizer.cpp  GvxVoxelizerDialog.cpp  GvxVoxelizerEngine.cpp  GvxWriter.cpp  main.cpp
Development/Tools/GigaVoxelsVoxelizer/Ui/: GvxQVoxelizerDialog.ui
Development/Tools/GigaVoxelsVoxelizer/doc/: tool.dox
Development/Tools/Legacy/GigaVoxelsDataConvertor/: CMakeLists.txt
Development/Tools/doc/: tools.dox
Development/Tutorials/Demos/: CMakeLists.txt
Development/Tutorials/Demos/ClippingPlane/: CMakeLists.txt
Development/Tutorials/Demos/DepthOfField/: CMakeLists.txt
Development/Tutorials/Demos/SimpleTriangles/: CMakeLists.txt
Development/Tutorials/Demos/doc/: tutorials.dox
Development/Tutorials/ViewerPlugins/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvAmplifiedSurface/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvAmplifiedVolume/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvAnimatedFan/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvAnimatedLUT/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvAnimatedSnake/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvCastShadows/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvClippingPlane/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvCollision/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvCollisionBBox/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvDepthOfField/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvDepthPeeling/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvDicomViewer/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvDynamicHypertexture/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvDynamicLoad/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvEnvironmentMapping/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvHypertexture/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvInfiniteSky/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvInstancing/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvLazyHypertexture/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvMandelbrotSet/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvMengerSponge/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvNoiseInAShellGLSL/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvNoiseInheritance/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvProductionPolicies/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvProxyGeometry/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvProxyGeometryGLSL/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvProxyGeometryManager/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvQualityRenderer/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvRAWDataLoader/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvRayMapGenerator/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvShellNoise/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSignedDistanceFieldVoxelization/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSimpleShapeGLSL/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSimpleSphere/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSimpleSphereCPU/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSimpleTorus/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSimpleTriangles/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSlisesix/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvSphereRayTracing/: CMakeLists.txt
Development/Tutorials/ViewerPlugins/GvVBOGenerator/: CMakeLists.txt
Surface/: CMakeLists.txt  SurfaceDetect.cxx
SurfaceComp/: CMakeLists.txt  SurfaceCompare.cxx  SurfaceDetection.cxx
SurfaceCompare/: CMakeLists.txt  SurfaceCompare.cxx
SurfaceCreation/: CMakeLists.txt  SurfaceCreation.cxx
(+3152 files in other folders)
